# Core-System

./: .auto-build.sh  .gitattributes  .gitignore  BTC_Layer_3_(L3).py  CERTIFICADO_SOBERANIA.txt  CORE_SOVEREIGN_ACTIVATE.py  Cargo.toml  EXECUTION_GUIDE.md  INTO3-FINAL-STATUS-REPORT.md  INTO3-MIA-SUMMARY.sh  INTO3-SUMMARY.sh  MIA-DELIVERY-SUMMARY.md  MIAX_AutoDeploy.py  NEXT_STEPS.md  QUANTUM_VALOR_STATUS.md  QVE_Deployment_Oracle.md  QVE_INFRA_ACTIVATE.py  QVE_INTEGRATE.py  QVE_Institutional_Status.md  QVE_MIA_Delivery_Protocol.md  QVE_MIA_Global_Report.sh  QVE_Master_Summary.sh  QVE_OMNI_MASTER_V1.py  QVE_ORCHESTRATOR.py  README.md  WHITE_PAPER.md  docker-compose.yml  health_check.py  setup.sh  start_miax.py
ai-guardian/: README.md  requirements.txt
blockchain-core/: ARCHITECTURE.md  README.md  install.sh
blockchain-core/solana-vlt/: .gitkeep  .program_id  Anchor.toml  COMPARISON.md  COMPILATION_REPORT.md  Cargo.toml  DEVNET_DEPLOYMENT.md  IMPLEMENTATION.md  INTO3-QUANTUM-VLT-SOVEREIGN-CONTRIBUTION.md  QUANTUM-VLT-SOVEREIGN-VARIANTS.md  README.md  STATUS.sh  build.sh  client.ts  install.sh  lib.rs  sbc.rs  v2_sovereign.rs
blockchain-core/solana-vlt/app/: connect.ts
blockchain-core/solana-vlt/programs/quantum_vlt/: Cargo.toml
blockchain-core/solana-vlt/programs/quantum_vlt/src/: lib.rs
blockchain-core/solana-vlt/src/: lib.rs
core/: miax_absorber.py
core_system/: synapse_meta.vlt
dashboard-os/: .gitkeep  README.md
docs/: DECLARATION.md  Dossier Maestro.sha256.txt  GNLL-INTO3-INTEGRATION.md  INTO3-INTEGRATION.md  MIA-DECLARATION.md  WHITE_PAPER.md  (+1 more)
(+159 files in other folders)
